...
                        onOkClick = {
                            view.finalizeBaniStocks()
                        },

                        )
                }) {
                    Text(text = "تایید نهایی")
                }
            }
        }
    }
}

...
                    )
                }

                LazyColumn(
                    modifier = Modifier.padding(bottom = 56.dp)
                ) {
                    items(view.filteredUiList.size) { i ->
                        BaniRecieveLazyColumnItem(i, view)
                    }
                }
            }
        }
    }
...
