...
    }

    @Composable
    fun BottomBar() {
        if (uiList.isNotEmpty()) {
            BottomBarButton(
                text = "بررسی و ارسال"
            ) {
                shelfEnter()
            }
        }
    }

...
