...
    //ui parameters
    var loading by mutableStateOf(false)
    var uiList = mutableStateListOf<Carton>()
    private var scanningMode by mutableStateOf(true)
    private var openDeleteDialog by mutableStateOf(false)
    var scannedBarcodes = mutableListOf<String>()
    private var destination by mutableStateOf("انتخاب مقصد")
    var driver by mutableStateOf("انتخاب راننده")
    var cartons = mutableStateMapOf<String, Carton>()
    private var stockDraftSpec by mutableStateOf("ارسال کارتن ها با RFID")
    var sortedWarehouseTitlesList = mutableListOf<String>()
    private var popupState = NotificationPopupHost()
    private var cartonNumber by mutableStateOf("")
...

    @Composable
    fun BottomBar() {
        if (uiList.isNotEmpty() && !loading) {

            if (scanningMode) {
                BottomBarButton(text = "ارسال کارتن ها") {
                    if (cartons.isEmpty()) {
                        showLog("هنوز کارتنی برای ارسال اسکن نکرده اید", state)
                    } else {
                        scanningMode = false
                        if (barcode.isEnabled) {
                            barcode.disable()
                        }
                    }
...
                    )
                }
                if (uiList.isEmpty()) {
                    EmptyBox("هنوز کارتنی برای ارسال اسکن نکرده اید")
                } else {
                    LazyColumn(modifier = Modifier.padding(bottom = 56.dp)) {
                        items(uiList.size) { i ->
                            LazyColumnItem(i)
                        }
                    }
                }
            }
        }
...
