...
                        } else {
                            showLog("مبدا کارتن با مقصد آن یکی است.", state)
                            errorBeep(state)
                        }

                    } else {
                        showLog("شماره کارتن نامعتبر است.", state)
                        errorBeep(state)
                    }
                    viewModel.loading = false
                }, {
                    errorBeep(state)
                    viewModel.loading = false
...
