...
fun NotificationPopUp(state: NotificationPopupHost) {

    if (state.showPopup1Button) {
        AlertDialogWithHeadlineMediumButton(
            onDismiss = { state.onDismiss() },
            title = state.message,
            btnTxt = "باشه",
            btnOnClick = { state.onDoneButtonClick() })

    } else if (state.showPopup2Button) {
        AlertDialogWith2Button(
            title = state.message,
            btnConfirm = state.oKButtonTitle,
...
