...
    private var scannedBarcodeMapWithProperties = mutableMapOf<String, Product>()

    //ui parameters
    var uiList = mutableStateMapOf<String, Product>()
    var loading by mutableStateOf(false)
    private var filteredUiList = mutableStateListOf<Product>()
    private var scanFilter by mutableStateOf("اضافی")
    private var signedFilter by mutableStateOf("همه")
    private var signedProductCodes = mutableListOf<String>()
    private var openClearDialog by mutableStateOf(false)
    private var scanTypeValue by mutableStateOf("RFID")

    @Inject
...
        }
        return true
    }

    fun scanTrigger() {

        if (scanTypeValue == "بارکد") {
            rf.stopScanning()
            barcode.startBarcodeScan()
        } else {
            if (!rf.scanning) {
                rf.startBulkScan()
            } else {
...
                    )
                }
            },

            actions = {
                IconButton(
                    modifier = Modifier.testTag("CountActivityClearButton"),
                    onClick = {
                        if (!rf.scanning && !loading) {
                            openClearDialog = true
                        }
                    }) {
                    Icon(
...

        Column {

            if (openClearDialog) {
                AlertDialogWith2Button(
                    title = "کالاهای اسکن شده پاک شوند؟",
                    btnConfirm = "بله",
                    btnNotConfirm = "خیر",
                    btnConfirmOnClick = {
                        openClearDialog = false
                        clear()
                    },
                    btnNotConfirmOnClick = {
...
                        rf.scanningPower = it
                    }
                }

                LazyColumn {

                    items(filteredUiList.size) { i ->
                        Item(
                            i,
                            filteredUiList,
                            true,
                            text3 = "رنگ: " + filteredUiList[i].color,
                            text4 = "اسکن: " + filteredUiList[i].scannedNumber,
...
