...
fun ScanFilterDropDownList(
    modifier: Modifier,
    filterValue: String,
    onFilterValueChange: (filterValue: String) -> Unit,
) {

    val scanValues = listOf("اضافی", "کسری")

    var expanded by rememberSaveable {
        mutableStateOf(false)
    }

    Box(modifier = modifier) {
...

    Box(modifier = modifier) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier
                .clickable { expanded = true }
                .testTag("scanTypeDropDownList")) {
            Text(text = scanTypeValue)
            Icon(
                imageVector = if (expanded) Icons.Filled.KeyboardArrowUp else Icons.Filled.KeyboardArrowDown, ""
            )
        }

...
